refactoring converters .. moving defaults to injection